--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ urgent:
 not urgent:
 	Map handling
 	save file (write and read)
+	Remove comment in example codes
 
 timeless:
 	Add correct error handling
